--- a/Platforms/Windows/MainWindow.xaml
+++ b/Platforms/Windows/MainWindow.xaml
@@ -1,5 +1,5 @@
-<Window
+<controls:MicrosoftMauiControls:MauiWinUIWindow
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="PunchKioskMobile.Platforms.Windows.MainWindow">
-</Window>
+</controls:MicrosoftMauiControls:MauiWinUIWindow>
